<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:weightSum="8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="什么是乘法逆元?"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/what_mean"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="如何计算？"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/solve"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="扩展欧几里德算法"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ojld"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>